src/main/java/com/example/user/common/errors/NotFoundError.java
package com.example.user.common.errors;

import org.springframework.http.HttpStatus;

public class NotFoundError extends BaseError {
    public NotFoundError() {
        super(HttpStatus.NOT_FOUND);
    }
}
